4.swagger api documentation setup

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "chillerlan/php-qrcode": "^5.0",
+        "darkaonline/l5-swagger": "^9.0",
         "intervention/image": "^3.11",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.3",
