--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "chillerlan/php-qrcode": "^5.0",
         "darkaonline/l5-swagger": "^9.0",
+        "google/cloud-vision": "^2.1",
         "intervention/image": "^3.11",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.3",
