--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.6.4",
+        "livewire/livewire": "^3.0",
         "riari/laravel-forum": "6.0",
         "spatie/laravel-permission": "^6.21",
         "stripe/stripe-php": "^17.6",
@@ -26,6 +26,7 @@
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^4.0",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
